--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,37 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #000000;
+  --foreground: #ffffff;
+}
+
+@font-face {
+  font-family: 'gratimo';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../shared/fonts/GratimoGrotesk-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'gratimo';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../shared/fonts/GratimoGrotesk-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'gratimo';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../shared/fonts/GratimoGrotesk-Bold.ttf') format('truetype');
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
