--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,7 @@
   font-family: 'gratimo', sans-serif;
   font-size: 20px;
   line-height: 120%;
+  letter-spacing: 0.05em;
 }
 @utility font-p1 {
   font-family: 'gratimo', sans-serif;
